--- a/dada/extras/documentation/pod_source/changes_10_x.pod
+++ b/dada/extras/documentation/pod_source/changes_10_x.pod
@@ -17,11 +17,13 @@ as well as the docs on advanced installation configuration,
 L<http://dadamailproject.com/d/install_dada_mail-advanced_configuration.pod.html#Configure-CAPTCHA>
 
 We've also removed support for reCAPTCHA v1, and the Default CAPTCHA type. You're
-much better served with reCAPTCHA v2, that these are choices just aren't worth your time. 
+so much better served with reCAPTCHA v2, that these other choices just aren't worth your time. 
 
 reCAPTCHA v2 requires the following CPAN module: C<Google::reCAPTCHA>, which you can install on its own, 
 or through our, C<Bundle::DadaMail> module, which will install all the other optional CPAN modules Dada Mail
-takes advantage of. 
+takes advantage of. Here's how you install CPAN modules, 
+
+L<http://dadamailproject.com/support/documentation-10_1_0/FAQ-installing_CPAN_Perl_modules.pod.html>
 
 =head1 10.1.0
 
