--- a/dada/extras/documentation/pod_source/changes_10_x.pod
+++ b/dada/extras/documentation/pod_source/changes_10_x.pod
@@ -2,6 +2,31 @@
 
 =encoding utf-8
 
+
+=head1 10.3.0 Beta 1
+
+=head2 Features
+
+=head3 Mass Mailing Message from RSS Feed
+
+Dada Mail can transform a RSS Feed into an email message to tbe sent as a mass mailing. Find this option in the list control panel under, 
+
+I<Mass Mailing - Send a Webpage> 
+
+In the I<HTML Version> tab, click the option, 
+
+I<Grab content from a RSS/Atom feed>
+
+and enter the URL of the feed in the textbox below this radio button. Additional options are available, 
+including adding HTML content before and after the entries from the feed, setting how many entries are included in the message, 
+and if the full entry is included or just a summary should be used. 
+
+Sending content from a feed becomes very powerful, when set up to send on a recurring schedule. If the option, 
+
+I<Only send the next scheduled mass mailing, if the primary content differs from the previous scheduled mass mailing>
+
+is checked, only newer entries that have not already been sent will be included in future mass mailings. 
+
 =head1 10.2.4
 
 =head2 Focus
