--- a/dada/extras/documentation/pod_source/changes_10_x.pod
+++ b/dada/extras/documentation/pod_source/changes_10_x.pod
@@ -2,6 +2,25 @@
 
 =encoding utf-8
 
+=head1 10.3.1
+
+=head2 Focus
+
+This is mostly a bug-fix release for issues found in the v10.3.0 release of Dada Mail. 
+
+=head2 Bugfixes
+
+=head3 Google reCAPTCHA code not shown at all/shown for every profile field for Minimal Subscription Form #627
+
+L<https://github.com/justingit/dada-mail/issues/627>
+
+=head3 Plugins: Bridge Discussion Lists do not work if Google reCAPTCHA is enabled for the initial sign up form #628
+
+L<https://github.com/justingit/dada-mail/issues/628>
+
+=head3 Bounce Handler: modal window does not show history of bounces, but message, "plugin not registered" #626
+
+L<https://github.com/justingit/dada-mail/issues/626>
 
 =head1 10.3.0
 
@@ -9,7 +28,11 @@
 
 =head3 Mass Mailing Message from RSS Feed
 
-Dada Mail can transform a RSS Feed into an email message to tbe sent as a mass mailing. Find this option in the list control panel under, 
+Dada Mail can transform a RSS Feed into an email message to tbe sent as a mass mailing. Read how to work with this in the following article:
+
+L<http://blog.dadamailproject.com/2017/01/03/use-dada-mail-to-create-a-mass-mailing-from-a-blog-feed-then-send-it-on-a-recurring-schedule/>
+
+Find this option in the list control panel under, 
 
 I<Mass Mailing - Send a Webpage> 
 
@@ -26,6 +49,9 @@ Sending content from a feed becomes very powerful, when set up to send on a recu
 I<Only send the next scheduled mass mailing, if the primary content differs from the previous scheduled mass mailing>
 
 is checked, only newer entries that have not already been sent will be included in future mass mailings. 
+
+
+
 
 =head1 10.2.4
 
