--- a/dada/extras/documentation/pod_source/changes_10_x.pod
+++ b/dada/extras/documentation/pod_source/changes_10_x.pod
@@ -2,6 +2,18 @@
 
 =encoding utf-8
 
+=head1 10.3.2
+
+=head2 Focus
+
+This is mostly a bug-fix release for issues found in the v10.3.0 release of Dada Mail. 
+
+=head2 Bugfixes
+
+=head3  Google reCAPTCHA compatibility/configuration check returns false positive #630 
+
+L<https://github.com/justingit/dada-mail/issues/630>
+
 =head1 10.3.1
 
 =head2 Focus
