--- a/dada/extras/documentation/pod_source/FAQ-installing_CPAN_Perl_modules.pod
+++ b/dada/extras/documentation/pod_source/FAQ-installing_CPAN_Perl_modules.pod
@@ -4,7 +4,8 @@
 
 =head1 Installing CPAN Perl Modules
 
-Many of Dada Mail's most advanced features rely on additional code libraries, called B<CPAN Perl Modules> to be installed and available on the web server that Dada Mail runs on. These features are usually entirely optional, meaning Dada Mail will run just fine without them, but your experiene will be enhanced if they are available. 
+Many of Dada Mail's most advanced features rely on additional code libraries, called B<CPAN Perl Modules> to be installed and available on the web server that Dada Mail runs on. 
+These features are usually entirely optional, meaning Dada Mail will run just fine without them, but your experiene will be greatly enhanced if they are available. 
 
 Usually, if a feature is unavailable because of a missing CPAN Perl module, there will be an alert either in the included Dada Mail Installer where you would initially configure this feature; or from within the list control panel, where you would enable/work the feature. 
 
@@ -20,7 +21,45 @@ L<https://metacpan.org/pod/distribution/Bundle-DadaMail/lib/Bundle/DadaMailXXL.p
 
 In this FAQ, we're going to focus on using the cPanel Perl Module Installer, which may be available to you, if you're running a hosting account powered by cPanel.  
 
-If you're not, you may have to ask your hosting support to install these modules. If you have full access to your webserver, the traditional ways of installing CPAN Perl modules will work just fine for you - either using a package manager released by the vendor of your operating system, or by using the C<cpan> or C<cpanm> command line tools. It's a little trickier, but certainly not impossible, to install Perl module without root privileges, but you'll need access to the command line. 
+=head1 Using the cPanel Perl Module Installer to install Bundle::DadaMail
+
+We're going to go ahead and install C<Bundle::DadaMail> which will give us all 
+the optional modules that Dada Mail uses. 
+
+Log into your cPanel. Search for, B<Perl Modules> 
+
+=begin html
+
+<p style="text-align:center">
+<img src="http://dadamailproject.com/images/support/documentation/v10/cpan/cpan-cpanel-perl_modules.jpg" width="1024" height="597" style="border:1px solid black" /><br /> 
+<em>Perl Modules</em> 
+</p>
+
+=end html
+
+Click this icon. 
+
+Scroll down, and find the form labeled, B<Install a Perl Module>.  In this form field, type in: C<Bundle::DadaMail>, then click: B<Install Now>
+
+
+=begin html
+
+<p style="text-align:center">
+<img src="http://dadamailproject.com/images/support/documentation/v10/cpan/cpan-install_a_module.jpg" width="1024" height="189" style="border:1px solid black" /><br /> 
+<em>Install a Module</em> 
+</p>
+
+=end html
+
+The process of fetching the module and installing it will then commence. Prepare to wait a few minutes, as the process does take a littl time. 
+
+A lot of diagnostics will be printed out, much of which you may ignore, unless the install doesn't work correctly. One reason the installation of a module will fail is because a compiler is not available. If you're on a shared host, you may be out of luck, unless your hosting support can help. If you have more control over your account, like access to WHM, you can turn on complier support in there. 
+
+Once the process is completed, click the button labeled, B<Go Back> at the bottom of the screen (or generally: go back to the B<Perl Modules> screen), and scroll below the, B<Install a Perl Module> form, where the table of B<Installed Perl Module(s)> is located. It should now be populated with many of the different Perl modules Dada Mail can now use. 
+
+=head1 Other ways to install CPAN Perl Modules
+
+If you're not, you may have to ask your hosting support to install these modules. If you have full access to your webserver, the traditional ways of installing CPAN Perl modules will work just fine for you - either using a package manager released by the vendor of your operating system, or by using the C<cpan> or C<cpanm> command line tools. It's a little trickier, but certainly not impossible, to install Perl module without root privileges, but you'll need access to your account via the command line. 
 
 Some resources: 
 
@@ -30,60 +69,5 @@ L<https://github.com/miyagawa/cpanminus>
 
 L<http://stackoverflow.com/questions/2980297/how-can-i-use-cpan-as-a-non-root-user>
 
-
-=head1 Using the cPanel Perl Module Installer
-
-In this example, we're going to install a CPAN Perl Module called, C<DateTime::Event::Recurrence>. This module is required to be installed if you want to have recurring scheduled mass mailings (one-time scheduled mass mailings don't require this module).
-
-=begin html
-
-<p style="text-align:center">
-<img src="http://dadamailproject.com/images/docs/cpanel_perl_modules-require_datetime.jpg" width="720" height="537" style="border:1px solid black" /><br /> 
-<em>Recurring Scheduled Mass Mailings disabled, without the required CPAN Perl Module</em> 
-</p>
-
-=end html
-
-Log into your cPanel. Search for, B<Perl Modules> 
-
-=begin html
-
-<p style="text-align:center">
-<img src="http://dadamailproject.com/images/docs/cpanel_perl_modules.jpg" width="720" height="272" style="border:1px solid black" /><br /> 
-<em></em> 
-</p>
-
-=end html
-
-Click this icon. 
-
-Scroll down, and find the form labeled, B<Install a Perl Module>.  In this form field, type in: C<DateTime::Event::Recurrence>, then click: B<Install Now>
-
-
-=begin html
-
-<p style="text-align:center">
-<img src="http://dadamailproject.com/images/docs/cpanel_perl_modules-install_datetime.jpg" width="720" height="802" style="border:1px solid black" /><br /> 
-<em></em> 
-</p>
-
-=end html
-
-The process of fetching the module and installing it will then commence. A lot of diagnostics will be printed out, much of which you may ignore, unless the install doesn't work correctly. One reason the installation of a module will fail is because a compiler is not available. If you're on a shared host, you may be out of luck, unless your hosting support can help. If you have more control over your account, like access to WHM, you can turn on complier support in there. 
-
-Once the process is completed, click the button labeled, B<Go Back> at the bottom of the screen (or generally: go back to the B<Perl Modules> screen), and scroll below the, B<Install a Perl Module> form, where the table of B<Installed Perl Module(s)> is located. 
-
-Look and see if you're newly installed CPAN Perl Module is one that's included in the list. 
-
-=begin html
-
-<p style="text-align:center">
-<img src="http://dadamailproject.com/images/docs/cpanel_perl_modules-installed.jpg" width="720" height="442" style="border:1px solid black" /><br /> 
-<em></em> 
-</p>
-
-=end html
-
-If so, success! Try out the feature in Dada Mail, and see if it is now enabled. 
 
 =cut
